[package]
name = "mux"
version = "0.1.0"
edition = "2021"

[dependencies]
async_async_io = "0.2"
primitive = { git = "https://github.com/Banyc/primitive.git", tag = "v0.0.56" }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
async_smux = "0.3"
clap = { version = "4", features = ["derive"] }
file_transfer = { git = "https://github.com/Banyc/file_transfer.git", tag = "v0.0.7" }

[features]
nightly = []

[profile.profiling]
debug = true
inherits = "release"
